--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,7 @@
                 </div>
         </div>
     </template>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/main.js" type="module"></script>
 </body>
 </html>
